[project]
name = "base-flask"
version = "1.0.0"
dependencies = [
    # Core packages
    "python-dotenv==1.2.1",   # Read environment variables from .env
    "Flask==3.1.2",           # Web microframework
    "gunicorn==23.0.0",       # WSGI server
    "syspath==3.0.8",         # Modify paths

    # Features
    "flask-sitemap==0.4.0",   # Web sitemaps

    # Monitoring/tracking/logging
    "blinker==1.9.0",         # Dependency of rollbar
    "rollbar==1.3.0",         # rollbar.com error logging
    "setproctitle==1.3.7",    # Allow gunicorn to set process title
    "varsnap==1.5.9",         # Test discovery
]

[project.optional-dependencies]
test = [
    # Testing
    "coverage==7.13.1",       # Test coverage
    "mypy==1.19.1",           # Type checking
    "ruff==0.14.13",          # Python linter
]

[tool.ruff]
# https://docs.astral.sh/ruff/rules/
lint.select = ["E", "F", "W", "A", "B", "COM", "N", "PLC", "PLE", "PLW"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = [
    ".",
]
omit = [
    ".virtualenv",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    'if __name__ == "__main__":',
]

[tool.setuptools]
py-modules = []
